// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddGroupsForm instance methods getGroups should return SearchResult[] if action is add groups action and it has groups 1`] = `
Array [
  Object {
    "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
    "name": "Customers",
  },
  Object {
    "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
    "name": "Unsatisfied Customers",
  },
  Object {
    "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
    "name": "Early Adopters",
  },
  Object {
    "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
    "name": "Testers",
  },
  Object {
    "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
    "name": "Subscribers",
  },
]
`;

exports[`AddGroupsForm instance methods getGroups should return an empty list if action's groups are null 1`] = `Array []`;

exports[`AddGroupsForm instance methods getGroups should return an empty list if action's groups property is an empty list 1`] = `Array []`;

exports[`AddGroupsForm instance methods getGroups should return empty list if action is remove groups action 1`] = `Array []`;

exports[`AddGroupsForm render should render self, children with base props 1`] = `
Object {
  "add": true,
  "assets": GroupAssets {
    "endpoint": "/assets/groups.json",
    "idProperty": "uuid",
    "items": Array [],
    "localStorage": true,
    "nameProperty": "name",
    "objects": Object {},
  },
  "groups": Array [
    Object {
      "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
      "name": "Customers",
    },
    Object {
      "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
      "name": "Unsatisfied Customers",
    },
    Object {
      "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
      "name": "Early Adopters",
    },
    Object {
      "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
      "name": "Testers",
    },
    Object {
      "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
      "name": "Subscribers",
    },
  ],
  "name": "Groups",
  "onChange": [Function],
  "placeholder": "Enter the name of an existing group or create a new one",
  "required": true,
  "searchPromptText": "Invalid group name",
}
`;
